welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:40: error: not enough arguments for method peindreMotif: (couleurs: Array[java.awt.Color])Unit.
Unspecified value parameter couleurs.
    peindreMotif()
                ^